# lazy-db

./: Cargo.toml  README.md  example_db.ldb
src/: error.rs  example.rs  lazy_archive.rs  lazy_container.rs  lazy_data.rs  lazy_database.rs  lazy_trait.rs  lazy_type.rs  lib.rs  ofile.rs  prelude.rs  utils.rs  version.rs
src/lazy_data/: file_wrapper.rs  reading.rs  writing.rs
src/lazy_type/: converter.rs  lazy_types.rs
src/ofile/: error.rs  ofile_mode.rs
tests/: isol.rs  lazy_data_test.rs  lazy_database_test.rs  ofile_test.rs
