[package]
name = "lazy-db"
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple, bare-bones and lazily loaded database for small projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = "0.11.1"
tar = "0.4.40"