[package]
name = "lazy-db"
version = "1.5.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple, bare-bones and lazily loaded database for small projects"
authors = ["kalscium <kalscium@protonmail.com>"]
repository = "https://github.com/kalscium/lazy-db"
keywords = [ "database", "lazy", "lazy-loaded" ]
categories = ["database"]

[lib]
name = "lazy_db"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = "0.11.1"
tar = "0.4.40"
